# densitygen

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  SAMPLE_QUERIES.md  SLIDES.md  eslint.config.mjs  fly.toml  prompts.md  pyproject.toml
app/api/screen/: route.ts
app/architecture/: page.tsx
app/intake/: page.tsx
components/screens/: ParetoExplorer.tsx  PrecursorScorecard.tsx  ScreeningConsole.tsx  SurfaceChemistry.tsx
components/shell/: NavRail.tsx
deploy/: hf_space.py
deploy/chgnet/: cog.yaml  predict.py
deploy/chgnet/.cog/: openapi_schema.json
deploy/screener/: cog.yaml  predict.py
deploy/uma/: cog.yaml  predict.py
examples/: hfo2_highk.json  new_material_screen.json  wf6_w.json
lib/data/: screen-cache.json
lib/engine/: cache.ts  queries.ts
lib/mp/: queries.ts
src/densitygen/: __init__.py  chem.py  cli.py  compute.py  design.py  interconnects.py  reporting.py  schemas.py  scoring.py  screen.py  server.py  structures.py  viz.py
src/densitygen/data/: __init__.py  films.py  precursors.py
src/densitygen/viz_assets/: densitygen.dc.html
tests/: test_chem.py  test_design_interconnects.py  test_real_simulation_web.py  test_screen.py  test_viz.py
web/: app.py
web/static/: about.html  index.html
